# training-module

./: .gitignore  Makefile  README.md  checkpoint.py  import_utils.py  io.py  main.py  pyproject.toml  requirements-train.txt  sample.env  summary.py  test_gan_training.py  train.py  trainer.py
.agents/skills/vibe-coder/: SKILL.md
cfg/: default.yaml
cfg/datasets/: imagenet.yaml
cfg/experiments/: classification.yaml
cfg/experiments/gan/: sample_gan.yaml
cfg/schema/: config.schema.json  dataset.schema.json
cfg/tasks/: classification.yaml  gan.yaml
data/: base.py  data_gen.py
docs/: LIBRARY_USAGE.md  LOGGING_AND_PROGRESS.md  PROJECT_STRUCTURE_AND_FLOW.md  VIBE_CODER_ARCHITECTURE.md
notebooks/: README.md
scripts/: README.md  smoke_ddp.sh
tests/: README.md  __init__.py  conftest.py
tests/configs/: test_classification.yaml  test_dataset.yaml
tests/data/: train_split.csv  val_split.csv
training/: __init__.py  config.py  registry.py
training/callbacks/: __init__.py  base.py  defaults.py  factory.py
training/data/: __init__.py  dataset.py  generator_backend.py
training/data/datasets/: __init__.py  factory.py  generator_dataset.py  readers.py  synthetic.py
training/data/loaders/: __init__.py  builder.py
training/data/samplers/: __init__.py  builder.py
training/engine/: __init__.py  runtime.py  state.py  trainer.py
training/nets/: __init__.py  backbone.py  classification.py
training/tasks/: __init__.py  base.py  registry.py
training/utils/: __init__.py  checkpoint.py  importer.py  input_spec.py  io.py  logger.py  optimizer.py  summary.py
(+11 files in other folders)
